--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,19 +1,23 @@
-name: Swift
+name: MGENetwork
 
 on:
   push:
-    branches: [ master ]
+    branches:
+    - master
+    - develop
   pull_request:
-    branches: [ master ]
+    branches:
+      - '*'
 
 jobs:
   build:
 
-    runs-on: macos-11.5
+    runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v2
     - name: Build
       run: swift build -v
     - name: Run tests
-      run: swift test -v
+      run: xcodebuild test -scheme MGENetwork -destination platform=iOS
+
