--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -19,5 +19,4 @@ jobs:
     - name: Build
       run: swift build -v
     - name: Run tests
-      run: xcodebuild test -scheme MGENetwork -destination platform=iOS
-
+      run: swift test -v
