--- a/.github/workflows/publish_documentation.yml
+++ b/.github/workflows/publish_documentation.yml
@@ -8,7 +8,8 @@ on:
 
   release:
   types: [ published ]
-  jobs:
+
+jobs: 
     
     publish:
     runs-on: macos-latest
@@ -16,7 +17,7 @@ on:
       – uses: actions/checkout@v2
       – name: Publish Jazzy Docs
   
-    uses: steven0351/publish-jazzy-docs@v1
+    uses: sersoft-gmbh/swifty-docs-action@v1
     with:
-    personal_access_token: ${{ secrets.ACCESS_TOKEN }}
-    config: .jazzy.yaml
+      output: docs
+      clean: true
