--- a/.github/workflows/publish_documentation.yml
+++ b/.github/workflows/publish_documentation.yml
@@ -1,13 +1,13 @@
 name: Publish Documentation - Jazzy
-  
-on:
-  pull_request:
-    brances:
-      - develop
-      - master
 
-  release:
-  types: [ published ]
+on:
+  push:
+    branches:
+    - master
+    - develop
+  pull_request:
+    branches:
+      - '*'
 
 jobs: 
     
