--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,11 +18,11 @@ jobs:
     - uses: actions/checkout@v2
     - name: Clean
       run: swift package clean
-    - name: Build for MacOS
+    - name: macOS Build
       run: swift build -v
-    - name: Build for iOS
-      run: swift build -v -Xswiftc "-sdk" -Xswiftc "`xcrun --sdk iphonesimulator --show-sdk-path`" -Xswiftc "-target" -Xswiftc "x86_64-apple-ios13.0-simulator"
-    - name: Run MacOS tests
+    - name: macOS Tests
       run: swift test -v
-    - name: Run iOS tests
-      run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild test-without-building -scheme IndexedDataStore -destination "platform=iOS Simulator,OS=latest,name=iPhone 12" | xcpretty
+    - name: iOS Build
+      run: swift build -v -Xswiftc "-sdk" -Xswiftc "`xcrun --sdk iphonesimulator --show-sdk-path`" -Xswiftc "-target" -Xswiftc "x86_64-apple-ios13.0-simulator"
+    - name: iOS Tests
+      run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild test-without-building -scheme MGENetwork -destination "platform=iOS Simulator,OS=latest,name=iPhone 12" | xcpretty
