--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,4 +25,4 @@ jobs:
     - name: iOS Build
       run: swift build -v -Xswiftc "-sdk" -Xswiftc "`xcrun --sdk iphonesimulator --show-sdk-path`" -Xswiftc "-target" -Xswiftc "x86_64-apple-ios13.0-simulator"
     - name: iOS Tests
-      run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild test-without-building -scheme MGENetwork -destination "platform=iOS Simulator,OS=latest,name=iPhone 12" | xcpretty
+      run: xcodebuild test -scheme MGENetwork -destination "platform=iOS Simulator,OS=latest,name=iPhone 12"
