--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,10 +1,10 @@
 name: CI
 
 on:
-  push:
-    branches:
-    - master
-    - develop
+  # push:
+  #   branches:
+  #   - master
+  #   - develop
   pull_request:
     branches:
       - '*'
@@ -18,10 +18,6 @@ jobs:
     - uses: actions/checkout@v2
     - name: Clean
       run: swift package clean
-    - name: macOS Build
-      run: swift build -v
-    - name: macOS Tests
-      run: swift test -v
     - name: iOS Build
       run: swift build -v -Xswiftc "-sdk" -Xswiftc "`xcrun --sdk iphonesimulator --show-sdk-path`" -Xswiftc "-target" -Xswiftc "x86_64-apple-ios13.0-simulator"
     - name: iOS Tests
