--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,13 +1,9 @@
 name: CI
 
 on:
-  # push:
-  #   branches:
-  #   - master
-  #   - develop
   pull_request:
     branches:
-      - '*'
+      - [develop master]
 
 jobs:
   build:
