--- a/.github/workflows/generate_doc.yml
+++ b/.github/workflows/generate_doc.yml
@@ -1,5 +1,5 @@
-# Build and deploy DocC to GitHub pages. Based off of @karwa's work here:
-# https://github.com/karwa/swift-url/blob/main/.github/workflows/docs.yml
+# Build and deploy DocC to GitHub pages. Based off of @pointfreeco's work here:
+# https://github.com/pointfreeco/swift-parsing/blob/main/.github/workflows/documentation.yml
 name: Documentation
 
 on:
@@ -75,27 +75,27 @@ jobs:
                 echo "✅ Documentation for "$tag" already exists.";
             else
                 git checkout "$tag";
-                mkdir -p Sources/Parsing/Documentation.docc;
+                mkdir -p Sources/MGENetwork/Documentation.docc;
                 export DOCC_HTML_DIR="$(pwd)/swift-docc-render/dist";
 
                 rm -rf .build/symbol-graphs;
                 mkdir -p .build/symbol-graphs;
                 swift build \
-                  --target Parsing \
+                  --target MGENetwork \
                   -Xswiftc \
                   -emit-symbol-graph \
                   -Xswiftc \
                   -emit-symbol-graph-dir \
                   -Xswiftc \
                   .build/symbol-graphs \
-                  && swift-docc/.build/release/docc convert Sources/Parsing/Documentation.docc \
-                    --fallback-display-name Parsing \
-                    --fallback-bundle-identifier co.pointfree.Parsing \
+                  && swift-docc/.build/release/docc convert Sources/MGENetwork/Documentation.docc \
+                    --fallback-display-name MGENetwork \
+                    --fallback-bundle-identifier co.pointfree.MGENetwork \
                     --fallback-bundle-version 0.0.0 \
                     --additional-symbol-graph-dir \
                     .build/symbol-graphs \
                     --transform-for-static-hosting \
-                    --hosting-base-path /swift-parsing/"$tag" \
+                    --hosting-base-path /swift-mge-network/"$tag" \
                     --output-path docs-out/"$tag" \
                     && echo "✅ Documentation generated for "$tag" release." \
                     || echo "⚠️ Documentation skipped for "$tag".";
