--- a/.github/workflows/generate_doc.yml
+++ b/.github/workflows/generate_doc.yml
@@ -64,8 +64,9 @@ jobs:
       - name: Build documentation
         run: >
           rm -rf docs/.git;
+          rm -rf docs/master;
 
-          for tag in $(echo "main"; git tag);
+          for tag in $(echo "master"; git tag);
           do
             echo "⏳ Generating documentation for "$tag" release.";
 
