fix doc generation

--- a/.github/workflows/generate_doc.yml
+++ b/.github/workflows/generate_doc.yml
@@ -68,6 +68,9 @@ jobs:
 
       - name: Build documentation
         run: >
+          rm -rf -f docs/.git;
+          rm -rf -f docs/master;
+
           for tag in $(echo "master"; git tag);
           do
             echo "⏳ Generating documentation for "$tag" release.";
