--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -15,6 +15,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Resolve package dependencies
+      run: swift package resolve
+
     - name: Build documentation
       run: |
         xcodebuild docbuild \
