--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -28,9 +28,6 @@ jobs:
     - name: Generate static hosting files
       run: |
         $(xcrun --find docc) process-archive \
-          transform-for-static-hosting $(DOC_ARCHIVE_PATH) \
-          --output-path $(OUTPUT_PATH) \
+          transform-for-static-hosting $(echo find derived-temp -type d -name 'MGENetwork.doccarchive') \
+          --output-path docs \
           --hosting-base-path /swift-mge-network/
-      env:
-        DOC_ARCHIVE_PATH: $(echo find derived-temp -type d -name 'MGENetwork.doccarchive')
-        OUTPUT_PATH: docs
