--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -64,18 +64,18 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: gh-pages
-          path: docs
+          path: docs-out
 
       - name: Build documentation
         run: >
-          rm -rf docs/.git;
-          rm -rf docs/master;
+          rm -rf docs-out/.git;
+          rm -rf docs-out/master;
 
           for tag in $(git tag);
           do
             echo "⏳ Generating documentation for "$tag" release.";
 
-            if [ -d "docs/$tag" ]
+            if [ -d "docs-out/$tag" ]
             then
                 echo "✅ Documentation for "$tag" already exists.";
             else
@@ -101,17 +101,17 @@ jobs:
                     .build/symbol-graphs \
                     --transform-for-static-hosting \
                     --hosting-base-path /swift-mge-network/"$tag" \
-                    --output-path docs/"$tag" \
+                    --output-path docs-out/"$tag" \
                     && echo "✅ Documentation generated for "$tag" release." \
                     || echo "⚠️ Documentation skipped for "$tag".";
             fi;
           done
 
       - name: Fix permissions
-        run: 'sudo chown --recursive $USER docs'
+        run: 'sudo chown --recursive $USER docs-out'
       - name: Publish documentation to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.7
         with:
           branch: gh-pages
-          folder: docs
+          folder: docs-out
           single-commit: true
