--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -28,8 +28,13 @@ jobs:
           ref: gh-pages
           path: docs-out
 
+      - name: iOS Build
+        run: xcodebuild -scheme MGENetwork -destination "platform=iOS Simulator,OS=latest,name=iPhone 12"
+
       - name: Build documentation
         run: >
+          rm -rf $DERIVED_DATA_DIR;
+
           for tag in $(git tag);
           do
             echo "⏳ Generating documentation for "$tag" release.";
