--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -32,7 +32,7 @@ jobs:
         run: xcodebuild -scheme MGENetwork -destination "platform=iOS Simulator,OS=latest,name=iPhone 12"
 
       - name: Build documentation
-        run: >
+        run: |
           rm -rf ${{env.DERIVED_DATA_DIR}};
 
           for tag in $(git tag);
