--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -70,6 +70,9 @@ jobs:
           ref: gh-pages
           path: docs-out
 
+      - name: Resolve Swift Package dependencies
+        run: swift package resolve
+
       - name: Generate documentation for every package version
         run: |
           rm -rf docs-out/.git;
