--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -68,15 +68,15 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: gh-pages
-          path: docs-out
+          path: ${{ env.OUTPUT_DIR }}
 
       - name: Resolve Swift Package dependencies
         run: swift package resolve
 
       - name: Generate documentation for every package version
         run: |
-          rm -rf docs-out/.git;
-          rm -rf docs-out/master;
+          rm -rf ${{ env.OUTPUT_DIR }}/.git;
+          rm -rf ${{ env.OUTPUT_DIR }}/master;
 
           for tag in $(echo "master"; git tag);
           do
@@ -84,13 +84,24 @@ jobs:
 
             if [ -d "${{ env.OUTPUT_DIR }}/$tag" ]
             then
-                echo "✅ Documentation for "$tag" already exists.";
+              echo "✅ Documentation for "$tag" already exists.";
             else
               git checkout "$tag";
+              mkdir -p Sources/Parsing/Documentation.docc;
               export DOCC_HTML_DIR="$(pwd)/swift-docc-render/dist";
+              rm -rf .build/symbol-graphs;
+              mkdir -p .build/symbol-graphs;
 
-              swift package --allow-writing-to-directory ${{ env.OUTPUT_DIR }} generate-documentation --target ${{ env.TARGET_NAME }} --disable-indexing --transform-for-static-hosting --hosting-base-path ${{ github.event.repository.name }}/$tag --output-path ${{ env.OUTPUT_DIR }}
-
+              swift build -v -Xswiftc "-sdk" -Xswiftc "`xcrun --sdk iphonesimulator --show-sdk-path`" -Xswiftc "-target" -Xswiftc "x86_64-apple-ios13.0-simulator" --target ${{ env.TARGET_NAME }} \
+                && swift-docc/.build/release/docc convert Sources/Parsing/Documentation.docc \
+                  --fallback-display-name ${{ env.TARGET_NAME }} \
+                  --fallback-bundle-identifier com.mge.MGENetwork \
+                  --fallback-bundle-version 0.0.0 \
+                  --transform-for-static-hosting \
+                  --hosting-base-path /swift-mge-network/"$tag" \
+                  --output-path ${{ env.OUTPUT_DIR }}/"$tag" \
+                  && echo "✅ Documentation generated for "$tag" release." \
+                  || echo "⚠️ Documentation skipped for "$tag".";
             fi;
           done
 
