--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -54,12 +54,15 @@ jobs:
             else
               git checkout "$tag";
 
-              swift package generate-documentation \
-                --target ${{ env.TARGET_NAME }} \
-                --disable-indexing \
-                --transform-for-static-hosting \
-                --hosting-base-path ${{ github.event.repository.name }}/$tag \
-                --output-path ${{ env.OUTPUT_DIR }}/$tag
+              xcodebuild docbuild \
+                -scheme ${{ env.TARGET_NAME }} \
+                -destination 'generic/platform=iOS' \
+                -derivedDataPath .derivedData \
+                OTHER_DOCC_FLAGS="--transform-for-static-hosting --output-path ${{ env.OUTPUT_DIR }}/$tag --hosting-base-path ${{ github.event.repository.name }}/"$tag"
+
+              find .derivedData \
+                -name "*.doccarchive" \
+                -exec cp -R {} ~/${{ env.OUTPUT_DIR }}/$tag \;
 
               if [ -d "${{ env.OUTPUT_DIR }}/$tag" ]
               then
