--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -61,8 +61,8 @@ jobs:
                 OTHER_DOCC_FLAGS="--transform-for-static-hosting --output-path ${{ env.OUTPUT_DIR }}/$tag --hosting-base-path ${{ github.event.repository.name }}/"$tag"
 
               find .derivedData \
-                -name "*.doccarchive" \
-                -exec cp -R {} ~/${{ env.OUTPUT_DIR }}/$tag \;
+                -name "MGENetwork.doccarchive" \
+                -exec cp -R {} ${{ env.OUTPUT_DIR }}/$tag
 
               if [ -d "${{ env.OUTPUT_DIR }}/$tag" ]
               then
