--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -61,12 +61,12 @@ jobs:
                 OTHER_DOCC_FLAGS="--transform-for-static-hosting --output-path ${{ env.OUTPUT_DIR }}/$tag --hosting-base-path ${{ github.event.repository.name }}/"$tag"
 
               find .derivedData \
-                -name "MGENetwork.doccarchive" \
+                -name "${{ env.TARGET_NAME }}.doccarchive" \
                 -exec cp -R {} ${{ env.OUTPUT_DIR }}/$tag
 
               if [ -d "${{ env.OUTPUT_DIR }}/$tag" ]
               then
-                echo "✅ Documentation generated for "$tag" release." \
+                echo "✅ Documentation generated for "$tag" release."
               else
                 echo "⚠️ Documentation skipped for "$tag".";
               fi;
