--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -64,13 +64,19 @@ jobs:
                 -name "${{ env.TARGET_NAME }}.doccarchive" \
                 -exec cp -R {} ${{ env.OUTPUT_DIR }}/$tag
 
+                find .derivedData \
+                  -name "$TARGET_NAME.doccarchive" \
+                  -exec cp -R {} $OUTPUT_DIR/$tag \;
+
               if [ -d "${{ env.OUTPUT_DIR }}/$tag" ]
               then
                 echo "✅ Documentation generated for "$tag" release."
               else
                 echo "⚠️ Documentation skipped for "$tag".";
               fi;
+
             fi;
+
           done
 
       - name: Publish documentation to GitHub Pages
