--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -60,16 +60,11 @@ jobs:
                 -derivedDataPath .derivedData \
                 OTHER_DOCC_FLAGS="--transform-for-static-hosting --output-path ${{ env.OUTPUT_DIR }}/$tag --hosting-base-path ${{ github.event.repository.name }}/"$tag"
 
+              mkdir "${{ OUTPUT_DIR }}/$tag"
+
               find .derivedData \
                 -name "${{ env.TARGET_NAME }}.doccarchive" \
                 -exec cp -R {} ${{ env.OUTPUT_DIR }}/$tag \;
-
-              if [ -d "${{ env.OUTPUT_DIR }}/$tag" ]
-              then
-                echo "✅ Documentation generated for $tag release.";
-              else
-                echo "⚠️ Documentation skipped for $tag.";
-              fi;
 
             fi;
 
