--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -60,7 +60,7 @@ jobs:
                 -derivedDataPath .derivedData \
                 OTHER_DOCC_FLAGS="--transform-for-static-hosting --output-path ${{ env.OUTPUT_DIR }}/$tag --hosting-base-path ${{ github.event.repository.name }}/"$tag"
 
-              mkdir "${{ OUTPUT_DIR }}/$tag"
+              mkdir "${{ env.OUTPUT_DIR }}/$tag"
 
               find .derivedData \
                 -name "${{ env.TARGET_NAME }}.doccarchive" \
